--- a/resources/sap/ui/suite/themes/sap_hcb/library-RTL.css
+++ b/resources/sap/ui/suite/themes/sap_hcb/library-RTL.css
@@ -54,11 +54,11 @@
   width: 31px;
   height: 58px;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
-  background-color: #7a5100;
+  background-color: #000000;
 }
 .sapUiVerticalProgressInnerContainer {
   position: relative;
-  background-color: #7a5100;
+  background-color: #000000;
 }
 /* Global CSS for 'sap_hcb' theme */
 /* Background Colors */
@@ -87,6 +87,20 @@
 /* modal, bubble, bottom, top */
 /* modal, bubble, bottom, top */
 /* Toolbar Separator */
+/* ------------------------------------------------------------------- */
+/* Generic Mapping: not for usage in standard control development !!!! */
+/* ------------------------------------------------------------------- */
+/* Semantic Text Colors */
+/* Semantic Element Colors */
+/* Semantic Backgrounds */
+/* Background Brand */
+/* Text Colors */
+/* Border Colors */
+/* @sapUiLightBorder: @sapHCStandardFG; */
+/* @sapUiExtraLightBorder: @sapHCStandardFG; */
+/* Accent */
+/* Backgrounds Header/Footer */
+/* Background */
 /* This CSS inherits rules from default/shared.css */
 /* ============================================= */
 /* CSS for control sap.ui.dev/TaskCircle.control */
